# BinaryCoverage

./: .gitignore  FuncTracer.cpp  FuncTracer.hpp  README.md  build.sh  go.mod  go.sum  makefile.rules
.github/workflows/: test.yml
cmd/: funkoverage.go  funkoverage_test.go  htmltemplates.go  report.go  templates.go  wrapunwrap.go
cmd/templates/: aggregate.html  detailed.html
dynamorio/: CMakeLists.txt  Makefile  build.sh  drcov.cpp  test_program.c
dynamorio/drcov_tool_test/: coverage.info  drtool_cov.txt
tests/: test_func_tracer.cpp
tests/e2e/: test_calc.py  test_calc.sh
utils/: find_lib.py
